syntax = "proto3";

option csharp_namespace = "PharmacyApi.Protos";
import "Protos/medicineInventoryModel.proto";

service MedicineInventoryService {
	rpc CheckMedicineAvailability (CheckMedicineAvailabilityRequestModel) returns (CheckMedicineAvailabilityResponseModel);
	rpc EmergencyMedicineProcurement (MedicineProcurementRequestModel) returns (MedicineProcurementResponseModel);
}